# imperativa-reborn

./: CMakeLists.txt  CMakePresets.json  README.md  grammar.txt  input.txt
data/: data.txt
include/shared/: Account.c  Account.h  AccountNode.c  AccountNode.h  types.h
lib/shared/include/shared/: Account.h  AccountNode.h  args.h  util.h
lib/shared/src/: Account.c  AccountNode.c  util.c
msc/: gm_output.py
shared/: compile_options.cmake  pch.cmake  prelude.h
src/editor/: main.c
src/exporter/: main.c
src/generator/: main.c
